--- a/index.html
+++ b/index.html
@@ -187,28 +187,28 @@
 
     <section class="profesion">
       <div class="container">
-        <h2 class="function-title">Чем мы занимаемся</h2>
+        <h2 class="profesion__title">Чем мы занимаемся</h2>
 
         <ul class="work-list">
-          <li class="work-item">
-            <div class="work-container">
-              <p class="work-content">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+          <li class="work-list__item">
+            <div class="work-list__container">
+              <p class="work-list__content">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
             <img srcset="./images/DesctopAnnexes.jpg 1x,
                          ./images/DesctopAnnexes-2x.jpg 2x" src="./images/img.jpg" alt="альтернативный текст"
               width="370" />
           </li>
-          <li class="work-item">
-            <div class="work-container">
-              <p class="work-content">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+          <li class="work-list__item">
+            <div class="work-list__container">
+              <p class="work-list__content">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
             <img srcset="./images/MobileAnnexes.jpg 1x,
                          ./images/MobileAnnexes-2x.jpg 2x" src="./images/img2.jpg" alt="альтернативный текст"
               width="370" />
           </li>
-          <li class="work-item">
-            <div class="work-container">
-              <p class="work-content">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+          <li class="work-list__item">
+            <div class="work-list__container">
+              <p class="work-list__content">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
             </div>
             <img srcset="./images/DesignSolutions.jpg 1x,
                          ./images/DesignSolutions-2x.jpg 2x" src="./images/img3.jpg" alt="альтернативный текст"
@@ -220,12 +220,12 @@
 
     <!-- Наша команда -->
 
-    <section class="comand">
+    <section class="command">
       <div class="container">
-        <h2 class="comand-title">Наша команда</h2>
+        <h2 class="command__title">Наша команда</h2>
 
-        <ul class="team">
-          <li class="photo">
+        <ul class="command__list">
+          <li class="command__item">
 
             <picture>
 
@@ -251,38 +251,38 @@
 
             </picture>
 
-            <h3 class="comand-initials">Игорь Демьяненко</h3>
-            <p class="icon-item">Product Designer</p>
+            <h3 class="command__initials">Игорь Демьяненко</h3>
+            <p class="command__profesion">Product Designer</p>
 
-            <ul class="comand-link">
+            <ul class="command-social">
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="16">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="16">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="10" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="10" height="20">
                     <use href="./images/symbol-defs.svg#icon-face"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
             </ul>
           </li>
-          <li class="photo">
+          <li class="command__item">
 
             <picture>
 
@@ -308,37 +308,37 @@
 
             </picture>
 
-            <h3 class="comand-initials">Ольга Репина</h3>
-            <p class="icon-item">Frontend Developer</p>
-            <ul class="comand-link">
+            <h3 class="command__initials">Ольга Репина</h3>
+            <p class="command__profesion">Frontend Developer</p>
+            <ul class="command-social">
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="16">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="16">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="10" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="10" height="20">
                     <use href="./images/symbol-defs.svg#icon-face"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
             </ul>
           </li>
-          <li class="photo">
+          <li class="command__item">
             <picture>
 
               <source srcset="./images/Marketing-450.jpg 450w,
@@ -362,37 +362,37 @@
               <img src="./images/Marketing-354.jpg" alt="альтернативный текст" />
 
             </picture>
-            <h3 class="comand-initials">Николай Тарасов</h3>
-            <p class="icon-item">Marketing</p>
-            <ul class="comand-link">
+            <h3 class="command__initials">Николай Тарасов</h3>
+            <p class="command__profesion">Marketing</p>
+            <ul class="command-social">
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="16">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="16">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="10" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="10" height="20">
                     <use href="./images/symbol-defs.svg#icon-face"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
             </ul>
           </li>
-          <li class="photo">
+          <li class="command__item">
             <picture>
 
               <source srcset="./images/UiDesigner-450.jpg 450w,
@@ -416,31 +416,31 @@
               <img src="./images/UiDesigner-354.jpg" alt="альтернативный текст" />
 
             </picture>
-            <h3 class="comand-initials">Михаил Ермаков</h3>
-            <p class="icon-item">UI Designer</p>
-            <ul class="comand-link">
+            <h3 class="command__initials">Михаил Ермаков</h3>
+            <p class="command__profesion">UI Designer</p>
+            <ul class="command-social">
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="16">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="16">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="10" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="10" height="20">
                     <use href="./images/symbol-defs.svg#icon-face"></use>
                   </svg></a>
               </li>
               <li>
-                <a href="" class="social-link">
-                  <svg class="icon-about_as" width="20" height="20">
+                <a href="" class="command-social__link">
+                  <svg class="command-social__icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a>
               </li>
@@ -452,48 +452,48 @@
     <!-- Клиенты -->
     <section class="client">
       <div class="container">
-        <h2 class="comand-title">Постоянные клиенты</h2>
+        <h2 class="client__title">Постоянные клиенты</h2>
 
-        <ul class="client-container">
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="44" height="49">
+        <ul class="client__list">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="44" height="49">
                 <use href="./images/symbol-defs.svg#icon-logo-1"></use>
               </svg>
             </a>
           </li>
 
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="40" height="52">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="40" height="52">
                 <use href="./images/symbol-defs.svg#icon-logo-2"></use>
               </svg>
             </a>
           </li>
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="41" height="42">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="41" height="42">
                 <use href="./images/symbol-defs.svg#icon-logo-3"></use>
               </svg>
             </a>
           </li>
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="79" height="42">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="79" height="42">
                 <use href="./images/symbol-defs.svg#icon-logo-4"></use>
               </svg>
             </a>
           </li>
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="59" height="47">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="59" height="47">
                 <use href="./images/symbol-defs.svg#icon-logo-5"></use>
               </svg>
             </a>
           </li>
-          <li class="client-container_item">
-            <a href="" class="client-link">
-              <svg class="client-svg" width="88" height="45">
+          <li class="client__item">
+            <a href="" class="client__link">
+              <svg class="client__icon" width="88" height="45">
                 <use href="./images/symbol-defs.svg#icon-logo-6"></use>
               </svg>
             </a>
@@ -507,55 +507,55 @@
 
   <footer class="footer">
 
-    <div class="container footer-container">
-      <div class="adaptive-footer-conteiner">
-        <div class="adress-container">
-          <a href="./" class="logo">Web<span class="logo-footer">Studio</span></a>
+    <div class="container footer__container--center">
+      <div class="footer__conteiner--adaptive">
+        <div class="footer__adress">
+          <a href="./" class="logo">Web<span class="footer__logo--white">Studio</span></a>
 
-          <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+          <p class="footer__text">г. Киев, пр-т Леси Украинки, 26</p>
 
-          <ul class="footer-adres_container">
+          <ul class="footer__list">
 
-            <li class="adres-item">
+            <li class="footer__item">
 
-              <a href="mailto:info@devstudio.com" class="adres-link">info@example.com</a>
+              <a href="mailto:info@devstudio.com" class="footer__link">info@example.com</a>
             </li>
             <li>
-              <a href="tal:+380991111111" class="adres-link">+380991111111</a>
+              <a href="tal:+380991111111" class="footer__link">+380991111111</a>
             </li>
           </ul>
         </div>
 
-        <div class="footer-socials-container">
+        <div class="footer__socials">
 
-          <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+     <b class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</b>     
 
-          <div class="footer-ikon">
+          <div class="footer__icon">
 
-            <a href="" class="footer-link_socials">
+            <a href="" class="footer__link">
               <svg class="footer-icon_item" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg></a>
           </div>
 
-          <div class="footer-ikon">
+          <div class="footer__icon">
 
-            <a href="" class="footer-link_socials">
+            <a href="" class="footer__link">
               <svg class="footer-icon_item" width="20" height="16">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg></a>
 
           </div>
 
-          <div class="footer-ikon">
-            <a href="" class="footer-link_socials">
+          <div class="footer__icon">
+            <a href="" class="footer__link">
               <svg class="footer-icon_item" width="10" height="20">
                 <use href="./images/symbol-defs.svg#icon-face"></use>
               </svg></a>
           </div>
 
-          <div class="footer-ikon">
-            <a href="" class="footer-link_socials">
+          <div class="footer__icon">
+            <a href="" class="footer__link">
               <svg class="footer-icon_item" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg></a>
