--- a/portfolio.html
+++ b/portfolio.html
@@ -515,60 +515,60 @@
 
     <footer class="footer">
 
-        <div class="container footer-container">
-            <div class="adaptive-footer-conteiner">
-                <div class="adress-container">
-                    <a href="./" class="logo">Web<span class="logo-footer">Studio</span></a>
+        <div class="container footer__container--center">
+            <div class="footer__conteiner--adaptive">
+                <div class="footer__adress">
+                    <a href="./" class="logo">Web<span class="footer__logo--white">Studio</span></a>
 
-                    <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+                    <p class="footer__text">г. Киев, пр-т Леси Украинки, 26</p>
 
-                    <ul class="footer-adres_container">
+                    <ul class="footer__list">
 
-                        <li class="adres-item">
+                        <li class="footer__item">
 
-                            <a href="mailto:info@devstudio.com" class="adres-link">info@example.com</a>
+                            <a href="mailto:info@devstudio.com" class="footer__link">info@example.com</a>
                         </li>
                         <li>
-                            <a href="tal:+380991111111" class="adres-link">+380991111111</a>
+                            <a href="tal:+380991111111" class="footer__link">+380991111111</a>
                         </li>
                     </ul>
                 </div>
 
 
-                <div class="footer-socials-container">
+                <div class="footer__socials">
 
-                    <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+             <b class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</b>       
 
-                    <div class="footer-ikon">
+                    <div class="footer__icon">
 
-                        <a href="" class="footer-link_socials">
+                        <a href="" class="footer__link">
                             <svg class="footer-icon_item" width="20" height="20">
                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg></a>
 
                     </div>
 
-                    <div class="footer-ikon">
+                    <div class="footer__icon">
 
-                        <a href="" class="footer-link_socials">
+                        <a href="" class="footer__link">
                             <svg class="footer-icon_item" width="20" height="16">
                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg></a>
 
                     </div>
 
-                    <div class="footer-ikon">
+                    <div class="footer__icon">
 
-                        <a href="" class="footer-link_socials">
+                        <a href="" class="footer__link">
                             <svg class="footer-icon_item" width="10" height="20">
                                 <use href="./images/symbol-defs.svg#icon-face"></use>
                             </svg></a>
 
                     </div>
 
-                    <div class="footer-ikon">
+                    <div class="footer__icon">
 
-                        <a href="" class="footer-link_socials">
+                        <a href="" class="footer__link">
                             <svg class="footer-icon_item" width="20" height="20">
                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                             </svg></a>
