--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <div class="footer__icon">
 
             <a href="" class="footer__link">
-              <svg class="footer-icon_item" width="20" height="20">
+              <svg class="footer__icon--white" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
               </svg></a>
           </div>
@@ -541,7 +541,7 @@
           <div class="footer__icon">
 
             <a href="" class="footer__link">
-              <svg class="footer-icon_item" width="20" height="16">
+              <svg class="footer__icon--white" width="20" height="16">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg></a>
 
@@ -549,28 +549,28 @@
 
           <div class="footer__icon">
             <a href="" class="footer__link">
-              <svg class="footer-icon_item" width="10" height="20">
+              <svg class="footer__icon--white" width="10" height="20">
                 <use href="./images/symbol-defs.svg#icon-face"></use>
               </svg></a>
           </div>
 
           <div class="footer__icon">
             <a href="" class="footer__link">
-              <svg class="footer-icon_item" width="20" height="20">
+              <svg class="footer__icon--white" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg></a>
           </div>
         </div>
       </div>
 
-      <div class="footer-form_container">
+      <div class="footer-form__container">
         <form class="footer-form" for="join" action="">Подпишитесь на рассылку</form>
 
-        <input class="footer-input" type="text" id="join" placeholder="E-mail">
+        <input class="footer-form__input" type="text" id="join" placeholder="E-mail">
 
 
-        <button class="footer-button">Подписаться
-          <span class="form-button_icon"></span>
+        <button class="footer-form__button">Подписаться
+          <span class="footer-form__button--icon"></span>
         </button>
       </div>
 
@@ -578,59 +578,60 @@
   </footer>
 
   <div class="backdrop is-hidden" data-modal>
+
     <div class="modal">
 
-      <button class="close" data-modal-close>
-        <svg class="close-icon" width="18" height="18">
+      <button class="modal__btn-close" data-modal-close>
+        <svg class="modal__btn-icon" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
       </button>
 
       <!-- форма -->
-      <form class="form">
+      <form class="modal-form">
 
-        <h3 class="form-title">Оставьте свои данные, мы вам перезвоним</h3>
+        <h3 class="modal-form__title">Оставьте свои данные, мы вам перезвоним</h3>
 
-        <label class="label" for="name">Имя</label>
+        <label class="modal-form__label" for="name">Имя</label>
 
-        <div class="form-label">
+        <div class="modal-form__input--flex">
 
-          <input class="form-input" type="text" name="name" id="name" autocomplete="off" />
+          <input class="modal-form__input" type="text" name="name" id="name" autocomplete="off" />
 
-          <svg class="form-icon" width="20" height="20">
+          <svg class="modal-form__icon" width="20" height="20">
             <use href="./images/symbol-defs.svg#icon-Name"></use>
           </svg>
 
         </div>
 
-        <label class="label" for="tel">Телефон</label>
+        <label class="modal-form__label" for="tel">Телефон</label>
 
-        <div class="form-label">
+        <div class="modal-form__input--flex">
 
-          <input class="form-input" type="tel" name="tel" id="tel" autocomplete="off" />
+          <input class="modal-form__input" type="tel" name="tel" id="tel" autocomplete="off" />
 
-          <svg class="form-icon" width="18" height="18">
+          <svg class="modal-form__icon" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-Phone"></use>
           </svg>
 
         </div>
 
-        <label class="label" for="mail">Почта</label>
+        <label class="modal-form__label" for="mail">Почта</label>
 
-        <div class="form-label">
+        <div class="modal-form__input--flex">
 
-          <input class="form-input" type="email" name="mail" id="mail" />
+          <input class="modal-form__input" type="email" name="mail" id="mail" />
 
-          <svg class="form-icon" width="20" height="20">
+          <svg class="modal-form__icon" width="20" height="20">
             <use href="./images/symbol-defs.svg#icon-modalmail"></use>
           </svg>
 
         </div>
 
-        <label class="label">Комментарий</label>
+        <label class="modal-form__label">Комментарий</label>
 
-        <div class="form-label">
-          <textarea class="form-input form-textarea" name="comment" rows="5" placeholder="Введите текст"></textarea>
+        <div class="modal-form__input--flex">
+          <textarea class="modal-form__input form-textarea" name="comment" rows="5" placeholder="Введите текст"></textarea>
         </div>
 
         <div class="checkbox-container">
