--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
       </div>
 
       <div class="footer-form__container">
-        <form class="footer-form" for="join" action="">Подпишитесь на рассылку</form>
+        <form class="footer-form" for="join">Подпишитесь на рассылку</form>
 
         <input class="footer-form__input" type="text" id="join" placeholder="E-mail">
 
