--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@
       </div>
 
       <div class="footer-form__container">
-        <form class="footer-form" for="join">Подпишитесь на рассылку</form>
+        <form class="footer-form">Подпишитесь на рассылку</form>
 
-        <input class="footer-form__input" type="text" id="join" placeholder="E-mail">
+        <input class="footer-form__input" type="text" placeholder="E-mail">
 
 
         <button class="footer-form__button">Подписаться
