--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Document</title>
+  <title>myStudio</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
@@ -195,7 +195,7 @@
               <p class="work-list__content">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
             <img srcset="./images/DesctopAnnexes.jpg 1x,
-                         ./images/DesctopAnnexes-2x.jpg 2x" src="./images/img.jpg" alt="альтернативный текст"
+                         ./images/DesctopAnnexes-2x.jpg 2x" src="./images/img.jpg" alt="картинка десктопного приложения которое мы разрабатываем"
               width="370" />
           </li>
           <li class="work-list__item">
@@ -203,7 +203,7 @@
               <p class="work-list__content">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
             <img srcset="./images/MobileAnnexes.jpg 1x,
-                         ./images/MobileAnnexes-2x.jpg 2x" src="./images/img2.jpg" alt="альтернативный текст"
+                         ./images/MobileAnnexes-2x.jpg 2x" src="./images/img2.jpg" alt="картинка мобильного приложения которое мы разрабатываем"
               width="370" />
           </li>
           <li class="work-list__item">
@@ -211,7 +211,7 @@
               <p class="work-list__content">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
             </div>
             <img srcset="./images/DesignSolutions.jpg 1x,
-                         ./images/DesignSolutions-2x.jpg 2x" src="./images/img3.jpg" alt="альтернативный текст"
+                         ./images/DesignSolutions-2x.jpg 2x" src="./images/img3.jpg" alt="картинка наше дезайнерское решение"
               width="370" />
           </li>
         </ul>
@@ -247,7 +247,7 @@
                               media="(min-width:1200px)"
                               sizes="(min-width:1200px) 270px,100vw">
 
-              <img src="./images/ProductDesinger-354.jpg" alt="альтернативный текст" />
+              <img src="./images/ProductDesinger-354.jpg" alt="фото Product Desinger" />
 
             </picture>
 
@@ -304,7 +304,7 @@
                                media="(min-width:1200px)"
                                sizes="(min-width:1200px) 270px,100vw">
 
-              <img src="./images/FrontendDeveloper-354.jpg" alt="альтернативный текст" />
+              <img src="./images/FrontendDeveloper-354.jpg" alt="фото Frontend Developer" />
 
             </picture>
 
@@ -359,7 +359,7 @@
                               media="(min-width:1200px)"
                               sizes="(min-width:1200px) 270px,100vw">
 
-              <img src="./images/Marketing-354.jpg" alt="альтернативный текст" />
+              <img src="./images/Marketing-354.jpg" alt="фото Marketing" />
 
             </picture>
             <h3 class="command__initials">Николай Тарасов</h3>
@@ -413,7 +413,7 @@
                               media="(min-width:1200px)"
                               sizes="(min-width:1200px) 270px,100vw">
 
-              <img src="./images/UiDesigner-354.jpg" alt="альтернативный текст" />
+              <img src="./images/UiDesigner-354.jpg" alt="фото UiDesigner" />
 
             </picture>
             <h3 class="command__initials">Михаил Ермаков</h3>
@@ -569,7 +569,7 @@
         <input class="footer-form__input" type="text" placeholder="E-mail">
 
 
-        <button class="footer-form__button">Подписаться
+        <button type="button" class="footer-form__button">Подписаться
           <span class="footer-form__button--icon"></span>
         </button>
       </div>
@@ -581,7 +581,7 @@
 
     <div class="modal">
 
-      <button class="modal__btn-close" data-modal-close>
+      <button type="button" class="modal__btn-close" data-modal-close>
         <svg class="modal__btn-icon" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
