--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -149,7 +149,7 @@
                                                  media="(min-width:1200px)"
                                                  sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio1-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio1-354.jpg" alt="картинка Технокряк" />
 
                             </picture>
 
@@ -191,7 +191,7 @@
                                                  media="(min-width:1200px)" 
                                                  sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio2-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio2-354.jpg" alt="Постер New Orlean vs Golden Star" />
 
                             </picture>
 
@@ -234,7 +234,7 @@
                                                media="(min-width:1200px)" 
                                                sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio3-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio3-354.jpg" alt="картинка Ресторан Seafood" />
 
                             </picture>
 
@@ -277,7 +277,7 @@
                                                 media="(min-width:1200px)" 
                                                 sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio4-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio4-354.jpg" alt="картинка Проект Prime" />
 
                             </picture>
 
@@ -320,7 +320,7 @@
                                                 media="(min-width:1200px)"
                                                  sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio5-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio5-354.jpg" alt="картинка Проект Boxes" />
 
                             </picture>
 
@@ -363,7 +363,7 @@
                                                  media="(min-width:1200px)"
                                                   sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio6-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio6-354.jpg" alt="картинка Inspiration has no Borders" />
 
                             </picture>
 
@@ -406,7 +406,7 @@
                                                  media="(min-width:1200px)" 
                                                  sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio7-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio7-354.jpg" alt="картинка Издание Limited Edition" />
 
                             </picture>
 
@@ -449,7 +449,7 @@
                                                  media="(min-width:1200px)" 
                                                  sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio8-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio8-354.jpg" alt="картинка Проект LAB" />
 
                             </picture>
 
@@ -492,7 +492,7 @@
                                                media="(min-width:1200px)" 
                                                sizes="(min-width:1200px) 370px,100vw">
 
-                                <img src="./images/Portfolio/Portfolio9-354.jpg" alt="альтернативный текст" />
+                                <img src="./images/Portfolio/Portfolio9-354.jpg" alt="картинка Growing Business" />
 
                             </picture>
 
