--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <a href="./" class="logo">Web<span class="logo--black">Studio</span></a>
 
-        <button type="button" class="menu-button " data-menu-button>
+        <button type="button" class="menu-button " data-menu-button><span class="visuallly-hidden" >кнопка меню</span>
 
           <svg class="menu-button__icon" width="40px" height="40px" aria-label="переключатель мобильного меню">
 
@@ -567,7 +567,7 @@
         <form class="footer-form">Подпишитесь на рассылку</form>
 
         <input class="footer-form__input" type="text" placeholder="E-mail">
-
+       
 
         <button type="button" class="footer-form__button">Подписаться
           <span class="footer-form__button--icon"></span>
@@ -581,7 +581,7 @@
 
     <div class="modal">
 
-      <button type="button" class="modal__btn-close" data-modal-close>
+      <button type="button" class="modal__btn-close" data-modal-close><span class="visuallly-hidden">кнопка закрытия модалки</span>
         <svg class="modal__btn-icon" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
