--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,8 @@
 
         <section class="projeckt">
 
+         <h2 class="visuallly-hidden">Portfolio</h2>
+
             <div class="container">
 
                 <ul class="portfolio-style">
