--- a/portfolio.html
+++ b/portfolio.html
@@ -544,7 +544,7 @@
                     <div class="footer__icon">
 
                         <a href="" class="footer__link">
-                            <svg class="footer-icon_item" width="20" height="20">
+                            <svg class="footer__icon--white" width="20" height="20">
                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg></a>
 
@@ -553,7 +553,7 @@
                     <div class="footer__icon">
 
                         <a href="" class="footer__link">
-                            <svg class="footer-icon_item" width="20" height="16">
+                            <svg class="footer__icon--white width="20" height="16">
                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg></a>
 
@@ -562,7 +562,7 @@
                     <div class="footer__icon">
 
                         <a href="" class="footer__link">
-                            <svg class="footer-icon_item" width="10" height="20">
+                            <svg class="footer__icon--white" width="10" height="20">
                                 <use href="./images/symbol-defs.svg#icon-face"></use>
                             </svg></a>
 
@@ -571,7 +571,7 @@
                     <div class="footer__icon">
 
                         <a href="" class="footer__link">
-                            <svg class="footer-icon_item" width="20" height="20">
+                            <svg class="footer__icon--white" width="20" height="20">
                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                             </svg></a>
 
@@ -581,14 +581,14 @@
 
                 </div>
             </div>
-            <div class="footer-form_container">
+            <div class="footer-form__container">
                 <form class="footer-form" for="join" action="">Подпишитесь на рассылку</form>
 
-                <input class="footer-input" type="text" id="join" placeholder="E-mail">
+                <input class="footer-form__input" type="text" id="join" placeholder="E-mail">
 
 
-                <button class="footer-button">Подписаться
-                    <span class="form-button_icon"></span>
+                <button type="button" class="footer-form__button">Подписаться
+                    <span class="footer-form__button--icon"></span>
                 </button>
             </div>
 
