--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <a href="./" class="logo">Web<span class="logo--black">Studio</span></a>
 
-        <button type="button" class="menu-button " data-menu-button><span class="visuallly-hidden" >кнопка меню</span>
+        <button type="button" aria-label="кнопка меню" class="menu-button " data-menu-button>
 
           <svg class="menu-button__icon" width="40px" height="40px" aria-label="переключатель мобильного меню">
 
@@ -581,7 +581,7 @@
 
     <div class="modal">
 
-      <button type="button" class="modal__btn-close" data-modal-close><span class="visuallly-hidden">кнопка закрытия модалки</span>
+      <button type="button" aria-label="кнопка закрытия модалки"class="modal__btn-close" data-modal-close>
         <svg class="modal__btn-icon" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
